[package]
name = "lastfmwrapped"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["clock"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
futures-util = "0.3.31"
lastfm = "0.10.0"
log = "0.4.22"
reqwest = "0.12.9"
rspotify = "0.13.3"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tqdm = "0.7.0"
