[package]
name = "lastfmwrapped"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.29"
aho-corasick = "1.1.3"
axum = "0.7.9"
base64 = "0.22.1"
bytes = "1.9.0"
chrono = { version = "0.4.38", features = ["clock"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
futures-util = "0.3.31"
image = "0.25.5"
imageproc = "0.25.0"
itertools = "0.13.0"
lastfm = "0.10.0"
log = "0.4.22"
rand = "0.8.5"
regex = "1.11.1"
reqwest = "0.12.9"
rspotify = "0.13.3"
serde_json = "1.0.133"
textwrap = "0.16.1"
thousands = "0.2.0"
titlecase = "3.3.0"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tqdm = "0.7.0"
unicode-truncate = "2.0.0"
